<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_5sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_10sdp"
    android:background="@drawable/bg_work"
    android:elevation="@dimen/_2sdp">

    <LinearLayout
        android:id="@+id/lnName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/txtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
        <TextView
            android:id="@+id/txtTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/imageView"
        android:layout_width="@dimen/_18sdp"
        android:layout_height="@dimen/_18sdp"
        android:button="@android:color/transparent"
        android:background="@drawable/ic_more_vert"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lnMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:drawableTopCompat="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            android:textSize="@dimen/_12ssp"
            app:drawableTint="@color/black"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:drawableTopCompat="@drawable/ic_star" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:drawableTopCompat="@drawable/ic_edit"
            app:drawableTint="@color/black" />

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/_12ssp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:drawableTopCompat="@drawable/ic_delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>